--- a/src/styles/page.module.css
+++ b/src/styles/page.module.css
@@ -5,6 +5,7 @@
 
   --button-primary-hover: #383838;
   --button-secondary-hover: #f2f2f2;
+  --background-main: #F4F4F4;
 
   display: grid;
   grid-template-rows: 20px 1fr 20px;
