--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -19,7 +19,11 @@
   --function-name-bg: #E8E8E8;
   --function-name-color: #636669;
   --space-3: 12px;
+  --space-4: 16px;
+  --space-5: 20px;
   --space-6: 24px;
+  --space-7: 28px;
+  --space-8: 32px;
   --space-9: 40px;
   --raduis-2x: 8px;
 }
