design: add tooltip on sidebar icon

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -26,6 +26,8 @@
   --space-8: 32px;
   --space-9: 40px;
   --raduis-2x: 8px;
+  --raduis-4x: 16px;
+  --raduis-8x: 32px;
 }
 
 /* Dark mode variables */
